# first

./: .env_sample  catalog_fixture.json  groups.json  pyproject.toml  requirements.txt
blog/: models.py  views.py
blog/migrations/: 0001_initial.py  0002_post_delete_paper.py
blog/templates/: post_list.html
catalog/: forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_category_description_alter_category_name_and_more.py  0003_alter_product_image.py  0004_alter_product_options.py  0005_product_owner_product_publication_status.py  0006_alter_product_options.py  0007_alter_product_options.py  0008_alter_product_options.py  0009_alter_product_owner_alter_product_publication_status.py
catalog/templates/: base.html  home.html  products_by_category.html  products_detail.html  products_list.html
catalog/templates/catalog/: base.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_remove_user_token.py  0004_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
