[tool.poetry]
name = "new"
version = "0.1.0"
description = ""
authors = ["fwrkin <fedotovvva23@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
black = "^24.10.0"
pillow = "^11.1.0"
ipython = "^8.31.0"
django = "4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
